Kleine Fixes